# Dummy-Android-Project

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/org/laughing/dummy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dummy.cpp
app/src/main/cpp/imgui/: MyFont.hpp  imgui.h  imgui_widgets.cpp
app/src/main/cpp/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/cpp/includes/: Common.h  Hooks.h  Logger.h  XorString.h
app/src/main/java/org/laughing/dummy/: MainActivity.kt
app/src/main/java/org/laughing/dummy/test/: myGlSurfaceView.kt  myRenderer.kt
app/src/main/java/org/laughing/dummy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/laughing/dummy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
